0028594: Geom2dAPI_Interpolate generated curve is not the same as proe

Boolean flag "Scale" has been added for methods "Load" in "Geom2dAPI_Interpolate" class